@@ -17,6 +17,8 @@ Changes in Shorewall 4.4.9
 
 8)  Deallocate unused rules.
 
+9)  Keep rule arrays compressed during optimization.
+
 Changes in Shorewall 4.4.8
 
 1)  Correct handling of RATE LIMIT on NAT rules.
